API PARA DELETAR A IMAGEM PELO ID
